# 6DoF-Arm

arm_interfaces/: CMakeLists.txt  package.xml
arm_interfaces/action/: ExecuteTask.action
arm_interfaces/msg/: DetectedObject.msg  DetectedObjectArray.msg
arm_interfaces/srv/: DetectObjects.srv  GetJointStates.srv  PickPlace.srv
arm_perception/: README.md  package.xml  setup.py
arm_perception/arm_perception/: localization_3d_node.py  realsense_node.py  webcam_demo_node.py  yolo_detector_node.py
arm_perception/config/: realsense_params.yaml  yolo_params.yaml
arm_perception/launch/: perception.launch.py  webcam_demo.launch.py
bcr_arm/: README.md
bcr_arm/bcr_arm_description/urdf/mech/: bcr_arm_mech.urdf.xacro
bcr_arm/bcr_arm_gazebo/: CMakeLists.txt  package.xml
bcr_arm/bcr_arm_gazebo/launch/: bcr_arm.gazebo.launch.py
bcr_arm/bcr_arm_gazebo/scripts/: cartesian_target_executor.py  cartesian_target_marker.py  cartesian_target_test_suite.py  dls_ik_executor.py  setup_arm_pose.py
config/yolo/: coffee_objects.yaml  train_config.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
