<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_perception</name>
  <version>0.1.0</version>
  <description>Object detection and 3D localization using RealSense D435i and YOLOv8</description>
  <maintainer email="todo@todo.com">developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>arm_interfaces</depend>
  <depend>visualization_msgs</depend>
  <depend>message_filters</depend>

  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
